[tool.poetry]
name = "fastapi-postgres-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["kwiats <pawuskwiatkowski@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_postgres_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.3"
fastapi = "^0.83.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
